<?xml version="1.0" encoding="utf-8"?><!-- res/layout/custom_alert_dialog.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="16dp"
    cardview:cardElevation="4dp"
    cardview:cardBackgroundColor="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/it_seems_you_are_not_connected_to_internet"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/please_check_your_internet_connection"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/RoundedButton"
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:padding="8dp"
                android:textColor="@color/black"
                android:text="@string/close" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>