<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_layout"
            android:id="@+id/include_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/result" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            tools:text="@string/result" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="0dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:textStyle="normal"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            app:icon="@drawable/baseline_save_24"
            app:iconTint="@color/white"
            app:cornerRadius="8dp"
            app:iconGravity="textStart" />

    </LinearLayout>
</ScrollView>